@@ -15,7 +15,7 @@
 	<description>Java Web Application Security Framework</description>
 
 	<properties>
-		<org.springframework.version>3.1.0.RELEASE</org.springframework.version>
+		<org.springframework.version>4.0.0.RELEASE</org.springframework.version>
 	</properties>
 
 	<dependencies>
