@@ -32,6 +32,8 @@ import org.springframework.util.Assert;
  * Can contain two types of exclusions, URL and parameter. The first to exclude URLs from validation and the second to
  * exclude parameter names.
  * </p>
+ * 
+ * @since 2.1.7
  */
 public class ExclusionRegistry {
 
